feat: add g1gc with xmx4g, xms4g